--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.2.8",
+    "@nextui-org/modal": "^2.2.6",
+    "@nextui-org/navbar": "^2.2.7",
     "@nextui-org/system": "^2.4.5",
     "@nextui-org/theme": "^2.4.4",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
