--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@nextui-org/button": "^2.2.8",
+    "@nextui-org/form": "^2.1.7",
+    "@nextui-org/input": "^2.4.7",
     "@nextui-org/modal": "^2.2.6",
     "@nextui-org/navbar": "^2.2.7",
     "@nextui-org/system": "^2.4.5",
@@ -20,8 +23,10 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
