--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@nextui-org/system": "^2.4.5",
     "@nextui-org/theme": "^2.4.4",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "mongoose": "^8.9.3",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
