--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,12 +46,7 @@
       ],
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["next-env.d.ts", "types/**/*.ts", "**/*.ts", "**/*.tsx"],
   "exclude": [
     "node_modules"
   ]
