--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,10 +43,16 @@
       ],
       "@/validation/*": [
         "./validation/*"
-      ],
+      ]
     }
   },
-  "include": ["next-env.d.ts", "types/**/*.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "next-env.d.ts",
+    "types/**/*.ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
