--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@nextui-org/button": "^2.2.8",
+    "@nextui-org/dropdown": "^2.3.9",
     "@nextui-org/form": "^2.1.7",
     "@nextui-org/input": "^2.4.7",
     "@nextui-org/modal": "^2.2.6",
