--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.15.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
@@ -31,6 +33,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
