--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.5",
     "zod": "^3.24.1"
