--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/date-picker": "^2.3.10",
     "@heroui/dropdown": "^2.3.10",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
