--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/date-picker": "^2.3.10",
     "@heroui/dropdown": "^2.3.10",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
@@ -25,6 +24,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "formidable": "^3.5.2",
     "framer-motion": "^11.15.0",
     "fs": "^0.0.1-security",
@@ -32,6 +32,7 @@
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-datepicker2": "^3.3.13",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
