--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-datepicker2": "^3.3.13",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-multi-date-picker": "^4.5.2",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.5",
